EXTREME_SPORTS: Funcionalidades para Prototipo: - Auth (Login /Register/Logout) - News - Gallery - Favorites (Solo listar Atletas y Categorias) - Settings

--- a/ExtremeSports/cordova-web/app/css/hecticus.css
+++ b/ExtremeSports/cordova-web/app/css/hecticus.css
@@ -118,3 +118,27 @@ body {
 .logo{
     margin: 8px;
 }
+
+.scroll-container {
+    position: relative;
+}
+
+.nav-scroll-header {
+    margin-bottom: 15px;
+    position: absolute;
+    right: 0;
+    left: 0;
+    z-index: 2;
+}
+
+.nav-tabs {
+    background-color: #FFF !important;
+}
+
+.nav-tabs > li > a {
+    color: #A43062 !important;
+}
+
+.nav-tabs > li > a:hover, .nav-tabs > li > a:focus {
+    color: #A43062 !important;
+}
