--- a/FutbolBrasil/futbol-brasil/app/modules/core/views/scorers.html
+++ b/FutbolBrasil/futbol-brasil/app/modules/core/views/scorers.html
@@ -3,7 +3,26 @@
         <ul>
             <li ng-style="getWidth()" ng-repeat="league in leagues" >
                 <div class="container">
-                    <div class="row row-header row-header-competition">
+
+                  <div class="row row-header">
+
+                    <div class="col-xs-12">
+                      <div class="row row-header-competition">
+                        <div class="col-xs-4 tabs text-left" ng-click="prevPage($index)">
+                          <span ng-bind="leagues[$index-1].name"></span>
+                        </div>
+                        <div class="col-xs-4">
+                          <span ng-bind="league.name" class="caption"></span>
+                        </div>
+                        <div class="col-xs-4 tabs text-right" ng-click="nextPage($index)">
+                          <span ng-bind="leagues[$index+1].name"></span>
+                        </div>
+                      </div>
+
+                    </div>
+                  </div>
+
+                    <!--div class="row row-header row-header-competition">
 
                         <div class="col-xs-4 tabs text-left" ng-click="prevPage()">
                             <h6 ng-bind="leagues[$index-1].name"></h6>
@@ -16,7 +35,7 @@
                         <div class="col-xs-4 tabs text-right" ng-click="nextPage()">
                             <h6 ng-bind="leagues[$index+1].name"></h6>
                         </div>
-                    </div>
+                    </div-->
 
                     <div class="row" ng-hide="league.empty">
                         <div id="{{vWrapper.getName($index)}}" class="wrapper wrapper-full">
@@ -26,8 +45,8 @@
                                         <table  ng-show="league.scorers" class="table">
                                             <thead>
                                             <tr>
-                                                <th translate>SCORERS.PLAYER_NAME_LABEL</th>
-                                                <th translate>SCORERS.TEAM_LABEL</th>
+                                                <th translate style="text-align: left;">SCORERS.PLAYER_NAME_LABEL</th>
+                                                <th translate style="text-align: left;">SCORERS.TEAM_LABEL</th>
                                                 <th translate>SCORERS.GOALS_LABEL</th>
                                             </tr>
                                             </thead>
